--- a/client/res/values/strings.xml
+++ b/client/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (c) 2013, Lazy-Remote Contributors
+  ~ Copyright (c) 2013, DIY-Remote Contributors
   ~ All rights reserved.
   ~
   ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided that the
@@ -25,5 +25,5 @@
   -->
 
 <resources>
-    <string name="app_name">Lazy Remote</string>
+    <string name="app_name">DIY Remote</string>
 </resources>
